-
Bug
-
Resolution: Done
-
P1: Critical
-
5.9.1
-
None
-
macOS 10.13
-
8ac9addd946637401e4685c6e91d1a3cd5b2d768
MainWindow::setUnifiedTitleAndToolBarOnMac is broken on High Sierra. It still changes the style of the tool bar slightly, but now there's a separator line between the title bar and the tool bar. Screen shot and minimal sample are attached.
For Gerrit Dashboard: QTBUG-63444 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
208117,2 | QCocoaWindow: Toggle titlebar transparency to support unified toolbar | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |