QCocoaWindow: Toggle titlebar transparency to support unified toolbar

This is need from macOS 10.13 onwards. See NSWindow related notes on

https://developer.apple.com/library/content/releasenotes/AppKit/RN-AppKit/

Change-Id: I4b4653d7342de985d22b128d73940e7163bdb1e8
Task-number: QTBUG-63444
Reviewed-by: Jake Petroules <jake.petroules@qt.io>